--- a/files/eructos_filosoficos.html
+++ b/files/eructos_filosoficos.html
@@ -13,6 +13,141 @@
 <ul id="151200" style="display:none"><![151,200]><br><br>
 <!-- *****[151,200] code*****}}} -->
 
+
+<!-- *****204*****{{{ -->
+<a id="204" href="#last" onclick="toggle('eructo_204')"><h3>204</h3></a>
+              	<ul id="eructo_204" style="display:none"><br>
+Darwin vio una ventaja muy favorable en heredar la idea de la evolución de Lucrecio sin mencionarlo
+siquiera, mientras que Lucrecio honra y homenajea a Demócrito sin ambigüedades.
+Interesante evolución de los evolucionistas.
+<br></ul><!eructo_204>
+<!-- *****204*****}}} -->
+<!-- *****203*****{{{ -->
+<a id="203" href="#last" onclick="toggle('eructo_203')"><h3>203</h3></a>
+              	<ul id="eructo_203" style="display:none"><br>
+De rerum natura de Lucrecio es una obra en la que muchos han ido a encontrar
+sin tributar el debido reconocimiento. Es un libro más vandalizado que cualquier
+tumba egipcia.
+<br></ul><!eructo_203>
+<!-- *****203*****}}} -->
+<!-- *****202*****{{{ -->
+<a id="202" href="#last" onclick="toggle('eructo_202')"><h3>202</h3></a>
+              	<ul id="eructo_202" style="display:none"><br>
+Por culpa de Twitter el aforismo se ha devaluado. De vivir hoy Cioran probablemente
+haría apología del ensayo interminable o quizás un rato en esa red social habría
+sido el empujón definitivo que necesitaba para saltar por la ventana. 
+<br></ul><!eructo_202>
+<!-- *****202*****}}} -->
+<!-- *****201*****{{{ -->
+<a id="201" href="#last" onclick="toggle('eructo_201')"><h3>201</h3></a>
+              	<ul id="eructo_201" style="display:none"><br>
+De haber estado en el tribunal de tesis de George Steiner le habría reprochado
+el ignorar la tragedia en la literatura española.
+<br></ul><!eructo_201>
+<!-- *****201*****}}} -->
+<!-- *****200*****{{{ -->
+<a id="200" href="#last" onclick="toggle('eructo_200')"><h3>200</h3></a>
+              	<ul id="eructo_200" style="display:none"><br>
+La música es el arte dionisíaca por excelencia, pero el músico 
+debe llevar una disciplina de lo más apolínea para alcanzar un
+nivel de virtuosismo que satisfaga a Dioniso.
+El culto a Baco a través del Bach más culto. ¿Hay embriaguez más sobria 
+y sobriedad más embriagadora?
+<br></ul><!eructo_200>
+<!-- *****200*****}}} -->
+<!-- *****199*****{{{ -->
+<a id="199" href="#last" onclick="toggle('eructo_199')"><h3>199</h3></a>
+              	<ul id="eructo_199" style="display:none"><br>
+Tengo la sensación de que muchos no esperaban a que acabase de hablar el oráculo. 
+Imagino a más de uno escuchando "Perecerás a manos de tu propio hijo..." y huyendo
+despavorido para poner un remedio mientras que Apolo, ya entre risas, acaba 
+"... ¡si lo tiras al río de niño!"
+<br></ul><!eructo_199>
+<!-- *****199*****}}} -->
+<!-- *****198*****{{{ -->
+<a id="198" href="#last" onclick="toggle('eructo_198')"><h3>198</h3></a>
+              	<ul id="eructo_198" style="display:none"><br>
+Tras escuchar todas las partes voto a favor de Clitemnestra. A ella la comprendo
+mejor a pesar de que es la peor tratada por los tres trágicos.
+<br></ul><!eructo_198>
+<!-- *****198*****}}} -->
+<!-- *****197*****{{{ -->
+<a id="197" href="#last" onclick="toggle('eructo_197')"><h3>197</h3></a>
+              	<ul id="eructo_197" style="display:none"><br>
+El honor social pesa mucho en las tragedias griegas, casi más que cualquier otro factor. 
+Tanto es así que los supuestos héroes me parecen más bien suicidas morales. 
+<br></ul><!eructo_197>
+<!-- *****197*****}}} -->
+<!-- *****196*****{{{ -->
+<a id="196" href="#last" onclick="toggle('eructo_196')"><h3>196</h3></a>
+              	<ul id="eructo_196" style="display:none"><br>
+En muchas tragedias de Eurípides debería aparecer una deus ex machina para
+llevarse al autor antes de que estropeara el final. 
+<br></ul><!eructo_196>
+<!-- *****196*****}}} -->
+<!-- *****195*****{{{ -->
+<a id="195" href="#last" onclick="toggle('eructo_195')"><h3>195</h3></a>
+              	<ul id="eructo_195" style="display:none"><br>
+Para mantener una disciplina diaria hay mucho que aprender sobre los creadores
+de telenovelas. ¿Cómo es posible que ellos consigan hacerte tragar su
+bazofia a diario con gusto mientras que tus proyectos, tan supuestamente
+interesantes, te repelan? Muy fácil: mientras el folletín te crea adicción, 
+tus proyectos necesitan motivación, que es todo lo contrario. La adicción cada
+día quiere más sin que tú hagas ningún esfuerzo. La motivación requiere cada día
+más esfuerzo porque cada día quieres menos. Por eso quien habla de motivación está
+ya fuera de su proyecto, mientras que quien es adicto a él no necesita más
+incentivos. Si quieres que tu proyecto sea como un culebrón, primero debes dejar
+que la culebra te muerda y te haga efecto el veneno, si es que lo tiene. 
+<br></ul><!eructo_195>
+<!-- *****195*****}}} -->
+<!-- *****194*****{{{ -->
+<a id="194" href="#last" onclick="toggle('eructo_194')"><h3>194</h3></a>
+              	<ul id="eructo_194" style="display:none"><br>
+Si te toca interpretar o escribir el papel de una persona menos madura que tú, 
+¿debes abordarlo con una inmadurez madura o con madurez inmadura? 
+¿Sería mejor, más auténtico y fresco, que alguien con inmadurez inmadura, le diera vida? 
+
+<br></ul><!eructo_194>
+<!-- *****194*****}}} -->
+<!-- *****193*****{{{ -->
+<a id="193" href="#last" onclick="toggle('eructo_193')"><h3>193</h3></a>
+              	<ul id="eructo_193" style="display:none"><br>
+Amar es trabajar para los intereses de tus genes.
+Amarte es trabajar para los intereses del vehículo de tu genes.
+Poliamor. Pluriempleo. 
+<br></ul><!eructo_193>
+<!-- *****193*****}}} -->
+<!-- *****192*****{{{ -->
+<a id="192" href="#last" onclick="toggle('eructo_192')"><h3>192</h3></a>
+              	<ul id="eructo_192" style="display:none"><br>
+Ver cómo la bola rebota, sube por rampas, activa luces y sonidos... mientras nosotros
+simplemente la observamos. De vez en cuando, abajo de todo, tenemos la opción de darle
+a un par de botones para activar dos torpes palanquitas y así poder seguir quedándonos
+boquiabiertos con un espectáculo abocado al agujero. Como un pinball, así concibo
+la libertad. 
+<br></ul><!eructo_192>
+<!-- *****192*****}}} -->
+<!-- *****191*****{{{ -->
+<a id="191" href="#last" onclick="toggle('eructo_191')"><h3>191</h3></a>
+              	<ul id="eructo_191" style="display:none"><br>
+
+Sufrir es malo pero te hace bueno. Ser bueno te hace sufrir, lo cual
+te hace aún más bueno. En consecuencia, ser bueno es malo. Darte cuenta
+de ello es bueno, pero te hace más malo. Ser malo te hace sufrir menos,
+lo cual te hace más malo. Ser malo es bueno. Darte cuenta es malo, 
+lo cual te hace más bueno. Y así oscila el que ve lo malo de lo bueno
+y lo bueno de lo malo sin renunciar a lo bueno de lo bueno ni 
+aceptando lo malo de malo. Esto le hace sufrir y le hace más bueno. 
+<br></ul><!eructo_191>
+<!-- *****191*****}}} -->
+<!-- *****190*****{{{ -->
+<a id="190" href="#last" onclick="toggle('eructo_190')"><h3>190</h3></a>
+              	<ul id="eructo_190" style="display:none"><br>
+
+Carpe diem Venusina. Me parece una filosofía mucho más terrestre.
+
+<br></ul><!eructo_190>
+<!-- *****190*****}}} -->
 <!-- *****189*****{{{ -->
 <a id="189" href="#last" onclick="toggle('eructo_189')"><h3>189</h3></a>
               	<ul id="eructo_189" style="display:none"><br>
