--- a/files/eructos_filosoficos.html
+++ b/files/eructos_filosoficos.html
@@ -48,7 +48,7 @@ el ignorar la tragedia en la literatura española.
 <!-- *****200*****{{{ -->
 <a id="200" href="#last" onclick="toggle('eructo_200')"><h3>200</h3></a>
               	<ul id="eructo_200" style="display:none"><br>
-La música es el arte dionisíaca por excelencia, pero el músico 
+La música es el arte dionisíaco por excelencia, pero el músico 
 debe llevar una disciplina de lo más apolínea para alcanzar un
 nivel de virtuosismo que satisfaga a Dioniso.
 El culto a Baco a través del Bach más culto. ¿Hay embriaguez más sobria 
