--- a/files/books.html
+++ b/files/books.html
@@ -17,6 +17,8 @@
 <h4><a href="#last" onclick="toggle('books_2020')">2020</a></h4>
 <ul id="books_2020" style="display:none"><!2020><br><br>
 <!-- books 2020 code*****}}} -->
+-<font size="4"><i> De vita beata</i></font>, de Séneca<br><br>
+-<font size="4"><i> The Black Swan</i></font>, by Nassim Nicholas Taleb<br><br>
 -<font size="4"><i> The Strangest Man, the Hidden Life of Paul Dirac</i></font>, by Graham Farmelo<br><br>
 -<font size="4"><i> Ten Arguments for Deleting your Social Media Accounts Right Now</i></font>, by Jaron Lanier<br><br>
 -<font size="4"><i> Fooled by Randomness</i></font>, by Nassim Nicholas Taleb<br><br>
