--- a/files/books.html
+++ b/files/books.html
@@ -17,6 +17,7 @@
 <h4><a href="#last" onclick="toggle('books_2020')">2020</a></h4>
 <ul id="books_2020" style="display:none"><!2020><br><br>
 <!-- books 2020 code*****}}} -->
+-<font size="4"><i> A mathematician's lament</i></font>, by Paul Lockhart (book)<br><br>
 -<font size="4"><i> De vita beata</i></font>, de Séneca<br><br>
 -<font size="4"><i> The Black Swan</i></font>, by Nassim Nicholas Taleb<br><br>
 -<font size="4"><i> The Strangest Man, the Hidden Life of Paul Dirac</i></font>, by Graham Farmelo<br><br>
@@ -45,7 +46,7 @@
 -<font size="4"><i> The Three-Body Problem</i></font>, by Cixin Liu<br><br>
 -<font size="4"><i> How not to be wrong</i></font>, by Jordan Ellenberg<br><br>
 -<font size="4"><i> The Joy of X</i></font>, by Steven Strogatz<br><br>
--<font size="4"><i> A mathematician's lament</i></font>, by Paul Lockhart<br><br>
+-<font size="4"><i> A mathematician's lament</i></font>, by Paul Lockhart (manifesto)<br><br>
 -<font size="4"><i> Miss Peregrine's home for Peculiar Children</i></font>, by Ransom Riggs <br><br>
 -<font size="4"><i> Pingüino perdido</i></font>, de Andrei Kurkov <br><br>
 -<font size="4"><i> Can't Hurt Me</i></font>, by David Goggins<br><br>
