--- a/index.html
+++ b/index.html
@@ -62,45 +62,47 @@ you@aleix_alva:~$
 <!*****meditacción*********}}}> 
 <!*****blog**********{{{>
 <h2><a href="index.html#last" onclick="toggle('node_blog')">blog</a></h2><!blog><ul id="node_blog" style="display:none">
+<script type="text/javascript"> $("#id_node_blog").click(function(){$("#node_blog").load("blog/index.html",function () {
+        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <!*****blog-0007**********{{{>
 <h3><a id="id_node_entry_0007" href="index.html#last" onclick="toggle('node_entry_0007')"> 7. Mr. Robot</a></h3>
 <!entry_0007><ul id="node_entry_0007" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0007").click(function(){$("#node_entry_0007").load("files/blog/blog_0007.html",function () {
+<script type="text/javascript"> $("#id_node_entry_0007").click(function(){$("#node_entry_0007").load("blog/blog_0007.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br> </ul><!entry_0007>
 <!*****blog-0006*********}}}> 
 <!*****blog-0006**********{{{>
 <h3><a id="id_node_entry_0006" href="index.html#last" onclick="toggle('node_entry_0006')"> 6. La Oca Asesina</a></h3>
 <!entry_0006><ul id="node_entry_0006" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0006").click(function(){$("#node_entry_0006").load("files/blog/blog_0006.html",function () {
+<script type="text/javascript"> $("#id_node_entry_0006").click(function(){$("#node_entry_0006").load("blog/blog_0006.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br> </ul><!entry_0006>
 <!*****blog-0006*********}}}> 
 <!*****blog-0005**********{{{>
 <h3><a id="id_node_entry_0005" href="index.html#last" onclick="toggle('node_entry_0005')"> 5. The r0oT experiment</a></h3>
 <!entry_0005><ul id="node_entry_0005" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0005").click(function(){$("#node_entry_0005").load("files/blog/blog_0005.html",function () {
+<script type="text/javascript"> $("#id_node_entry_0005").click(function(){$("#node_entry_0005").load("blog/blog_0005.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br> </ul><!entry_0005>
 <!*****blog-0005*********}}}> 
 <!*****blog-0004**********{{{>
 <h3><a id="id_node_entry_0004" href="index.html#last" onclick="toggle('node_entry_0004')"> 4. Remembering songs recorded at home</a></h3>
 <!entry_0004><ul id="node_entry_0004" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0004").click(function(){$("#node_entry_0004").load("files/blog/blog_0004.html",function () {
+<script type="text/javascript"> $("#id_node_entry_0004").click(function(){$("#node_entry_0004").load("blog/blog_0004.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br></ul><!entry_0004>
 <!*****blog-0004*********}}}> 
 <!*****blog-0003**********{{{>
 <h3><a id="id_node_entry_0003" href="index.html#last" onclick="toggle('node_entry_0003')"> 3. Freedom</a></h3>
 <!entry_0003><ul id="node_entry_0003" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0003").click(function(){$("#node_entry_0003").load("files/blog/blog_0003.html",function () {
+<script type="text/javascript"> $("#id_node_entry_0003").click(function(){$("#node_entry_0003").load("blog/blog_0003.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br> </ul><!entry_0003>
 <!*****blog-0003*********}}}> 
 <!*****blog-0002**********{{{>
 <h3><a id="id_node_entry_0002" href="index.html#last" onclick="toggle('node_entry_0002')"> 2. Speed School</a></h3>
 <!entry_0002><ul id="node_entry_0002" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0002").click(function(){$("#node_entry_0002").load("files/blog/blog_0002.html",function () {
+<script type="text/javascript"> $("#id_node_entry_0002").click(function(){$("#node_entry_0002").load("blog/blog_0002.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br>
 </ul><!entry_0002>
@@ -108,7 +110,7 @@ you@aleix_alva:~$
 <!*****blog-0001**********{{{>
 <h3><a id="id_node_entry_0001" href="index.html#last" onclick="toggle('node_entry_0001')"> 1. A new hope</a></h3>
 <!entry_0001><ul id="node_entry_0001" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0001").click(function(){$("#node_entry_0001").load("files/blog/blog_0001.html",function () {
+<script type="text/javascript"> $("#id_node_entry_0001").click(function(){$("#node_entry_0001").load("blog/blog_0001.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br>
 </ul><!entry_0001>
