--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ you@aleix_alva:~$
 <h2><a href="index.html#last" onclick="toggle('node_blog')">blog</a></h2><!blog><ul id="node_blog" style="display:none">
 <script type="text/javascript"> $("#id_node_blog").click(function(){$("#node_blog").load("blog/index.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
+-direct access to the blog: <a href="blog/index.html" target=_blank>click here</a>
 <!*****blog-0007**********{{{>
 <h3><a id="id_node_entry_0007" href="index.html#last" onclick="toggle('node_entry_0007')"> 7. Mr. Robot</a></h3>
 <!entry_0007><ul id="node_entry_0007" style="display:none"><br>
