--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ you@aleix_alva:~$
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-</script>
 <!*****mobile or desktop**********{{{>
 <style type="text/css">
  .mobileHide { display: inline;}
@@ -33,7 +32,7 @@ you@aleix_alva:~$
 <!*****HEADERS*********}}}> 
 <body>
 <!*****quotation**********{{{>
-<small><i>"nyi-nyi-nyi-nyi"</i> (calfred hitchcock<i></i>)</small><br><br>
+<small>page of aleix alva, citizen of the cosmos</small><br><br>
 <!*****quotation*********}}}> 
 <!*****current comic**********{{{>
 <a  href="http://www.lawebdefisica.com/humor/tiras" target=_blank>
@@ -43,90 +42,27 @@ you@aleix_alva:~$
 <ul><!raiz>
 <h1><a href="index.html#last" onclick="toggle('node1')">home</a></h1>
     <ul id="node1" style="display:none"><!home>
-<!*****music-log**********{{{>
-<h2><a id="id_music" href="index.html#last" onclick="toggle('music')">music</a></h2><!music><ul id="music" style="display:none">
-<!music><ul id="music" style="display:none"><br>
-<script type="text/javascript"> $("#id_music").click(function(){$("#music").load("files/music.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!music>
-
- </ul><!music>
-<!*****music-log*********}}}> 
-<!*****meditacción**********{{{>
-<h2><a id="id_meditaccion" href="index.html#last" onclick="toggle('meditaccion')">meditacción</a></h2><!meditaccion><ul id="meditaccion" style="display:none">
-<!meditaccion><ul id="meditaccion" style="display:none"><br>
-<script type="text/javascript"> $("#id_meditaccion").click(function(){$("#meditaccion").load("files/meditaccion.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!meditaccion>
-</ul><!meditaccion>
-<!*****meditacción*********}}}> 
 <!*****blog**********{{{>
-<h2><a href="index.html#last" onclick="toggle('node_blog')">blog</a></h2><!blog><ul id="node_blog" style="display:none">
-<script type="text/javascript"> $("#id_node_blog").click(function(){$("#node_blog").load("blog/index.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
--direct access to the blog: <a href="blog/index.html" target=_blank>click here</a>
-<!*****blog-0007**********{{{>
-<h3><a id="id_node_entry_0007" href="index.html#last" onclick="toggle('node_entry_0007')"> 7. Mr. Robot</a></h3>
-<!entry_0007><ul id="node_entry_0007" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0007").click(function(){$("#node_entry_0007").load("blog/blog_0007.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!entry_0007>
-<!*****blog-0006*********}}}> 
-<!*****blog-0006**********{{{>
-<h3><a id="id_node_entry_0006" href="index.html#last" onclick="toggle('node_entry_0006')"> 6. La Oca Asesina</a></h3>
-<!entry_0006><ul id="node_entry_0006" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0006").click(function(){$("#node_entry_0006").load("blog/blog_0006.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!entry_0006>
-<!*****blog-0006*********}}}> 
-<!*****blog-0005**********{{{>
-<h3><a id="id_node_entry_0005" href="index.html#last" onclick="toggle('node_entry_0005')"> 5. The r0oT experiment</a></h3>
-<!entry_0005><ul id="node_entry_0005" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0005").click(function(){$("#node_entry_0005").load("blog/blog_0005.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!entry_0005>
-<!*****blog-0005*********}}}> 
-<!*****blog-0004**********{{{>
-<h3><a id="id_node_entry_0004" href="index.html#last" onclick="toggle('node_entry_0004')"> 4. Remembering songs recorded at home</a></h3>
-<!entry_0004><ul id="node_entry_0004" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0004").click(function(){$("#node_entry_0004").load("blog/blog_0004.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br></ul><!entry_0004>
-<!*****blog-0004*********}}}> 
-<!*****blog-0003**********{{{>
-<h3><a id="id_node_entry_0003" href="index.html#last" onclick="toggle('node_entry_0003')"> 3. Freedom</a></h3>
-<!entry_0003><ul id="node_entry_0003" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0003").click(function(){$("#node_entry_0003").load("blog/blog_0003.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br> </ul><!entry_0003>
-<!*****blog-0003*********}}}> 
-<!*****blog-0002**********{{{>
-<h3><a id="id_node_entry_0002" href="index.html#last" onclick="toggle('node_entry_0002')"> 2. Speed School</a></h3>
-<!entry_0002><ul id="node_entry_0002" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0002").click(function(){$("#node_entry_0002").load("blog/blog_0002.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br>
-</ul><!entry_0002>
-<!*****blog-0002*********}}}> 
-<!*****blog-0001**********{{{>
-<h3><a id="id_node_entry_0001" href="index.html#last" onclick="toggle('node_entry_0001')"> 1. A new hope</a></h3>
-<!entry_0001><ul id="node_entry_0001" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_entry_0001").click(function(){$("#node_entry_0001").load("blog/blog_0001.html",function () {
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
-<br><br>
-</ul><!entry_0001>
-<!*****blog-0001*********}}}> 
+<h2><a id="id_node_blog" href="index.html#last" onclick="toggle('node_blog')">blog</a></h2><!blog>
+<ul id="node_blog" style="display:none">
+<h3><a href='/blog/8' target=_blank>8. prime contact </a></h3>
+<h3><a href='/blog/7' target=_blank>7. mr. robot </a></h3>
+<h3><a href='/blog/6' target=_blank>6. la oca asesina</a></h3>
+<h3><a href='/blog/5' target=_blank>5. the r0oT experiment</a></h3>
+<h3><a href='/blog/4' target=_blank>4. old recordings</a></h3>
+<h3><a href='/blog/3' target=_blank>3. freedom</a></h3>
+<h3><a href='/blog/2' target=_blank>2. speed school</a></h3>
+<h3><a href='/blog/1' target=_blank>1. a new hope</a></h3>
  </ul><!blog>
 <!*****blog*********}}}> 
-<!*****eructos-filosóficos**********{{{>
-<h2><a id="id_node_eructos" href="index.html#last" onclick="toggle('node_eructos')"> eructos filosóficos</a></h2>
-<!eructos><ul id="node_eructos" style="display:none"><br>
-<script type="text/javascript"> $("#id_node_eructos").click(function(){$("#node_eructos").load("files/eructos_filosoficos.html");});</script> 
-</ul><!eructos>
-<!*****eructos-filosóficos*********}}}> 
+<!*****littleatura**********{{{>
+<h2><a href="littleatura/index.html" target=_blank>littleatura</a></h2>
+<!*****littleatura*********}}}> 
 <!*****importunate permutation**********{{{>
 <h2><a id="id_short" href="index.html#last" onclick="toggle('short')">importunate permutation</a></h2>
 <ul id="short" style="display:none">
+plan A: opus<br>
+plan B: opos<br><br>
 Camarón, el Monarca<br><br>
 The pets fart. Fart de pets.<br><br>
 tetris triste<br><br>
@@ -137,7 +73,7 @@ paràsits i maràsits<br><br>
 do me a flavor, please<br><br>
 Calfred Hitchcock<br><br>
 mathematics for the asthmatic me<br><br>
-me sube la tremperatura<br><br>
+em puja la tremperatura<br><br>
 me pone un poco nerviosísima<br><br>
 fired &amp; fried<br><br>
 el piano està desafiant<br><br>
@@ -186,6 +122,23 @@ wolf flow<br><br>own my own ♫<br><br>
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 </ul><!readings>
 <!*****readings*********}}}> 
+<!*****music-log**********{{{>
+<h2><a id="id_music" href="index.html#last" onclick="toggle('music')">music</a></h2><!music><ul id="music" style="display:none">
+<!music><ul id="music" style="display:none"><br>
+<script type="text/javascript"> $("#id_music").click(function(){$("#music").load("files/music.html",function () {
+        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
+<br><br> </ul><!music>
+
+ </ul><!music>
+<!*****music-log*********}}}> 
+<!*****meditacción**********{{{>
+<h2><a id="id_meditaccion" href="index.html#last" onclick="toggle('meditaccion')">meditacción</a></h2><!meditaccion><ul id="meditaccion" style="display:none">
+<!meditaccion><ul id="meditaccion" style="display:none"><br>
+<script type="text/javascript"> $("#id_meditaccion").click(function(){$("#meditaccion").load("files/meditaccion.html",function () {
+        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
+<br><br> </ul><!meditaccion>
+</ul><!meditaccion>
+<!*****meditacción*********}}}> 
 <!*****teaching**********{{{>
 <h2> <a id="id_teaching" href="index.html#last" onclick="toggle('teaching')"> teaching</a></h2>
 <ul id="teaching" style="display:none">
